Models done, list routes to set up next

--- a/views/layout.hbs
+++ b/views/layout.hbs
@@ -14,9 +14,9 @@
 <nav class = "space-between">
       <ul class="nav-bar">
          <li><a href="/">Home</a></li>
-        <li><a href="/profile">List</a></li>
+        <li><a href="/my-list">My List</a></li>
         <li><a href="#">Priorities</a></li>
-        <li><a href="#">Celebrate</a></li>
+        <li><a href="#">Completed</a></li>
         </ul>
         <ul class="nav-bar">
           <li><a href="/signup" target="_blank">Sign up</a></li>
