--- a/views/my-list.hbs
+++ b/views/my-list.hbs
@@ -7,6 +7,7 @@
     <title>Document</title>
 </head>
 <body>
-    <h1>Hello {{username}}</h1>
+    <h1>My List</h1>
+    <h3>Welcome, {{username}}</h3>
 </body>
 </html>
