Working on the list of priorities

--- a/views/layout.hbs
+++ b/views/layout.hbs
@@ -15,7 +15,7 @@
       <ul class="nav-bar">
          <li><a href="/">Home</a></li>
         <li><a href="/my-list">My List</a></li>
-        <li><a href="#">Priorities</a></li>
+        <li><a href="/priorities">Priorities</a></li>
         <li><a href="#">Completed</a></li>
         </ul>
         <ul class="nav-bar">
