--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -1,16 +1,10 @@
-/* body {
-  padding: 50px;
-  font: 14px "Lucida Grande", Helvetica, Arial, sans-serif;
-  background-color: red;
-} */
-
-/* a {
-  color: #00b7ff;
+body {
+  padding: 0;
+  margin: 0;
+  font: 16px "Lucida Grande", Helvetica, Arial, sans-serif;
+  line-height: 1.6;
 }
 
-h1 {
-  color: 15px;
-} */
 
 .form-setup > label, input {
   display: block;
@@ -30,10 +24,41 @@ nav ul {
 nav ul a {
   margin-right:2rem;
   text-decoration: none;
-  font-size: 1.5rem;
+  /* font-size: 1.5rem; */
 }
 
-.container {
+/* .container {
   display: flex;
   padding: 0.5rem;
+} */
+
+/* .container {
+  margin-inline: auto;
+  width: min(50%, 70.5rem)
+} */
+
+.split {
+  display: flex;
+  padding: 1rem;
+}
+
+
+/*Priorities.hbs*/
+.grid-container {
+  display: grid;
+  grid-template-columns: auto auto auto;
+  padding: 10px;
+  width: min(80%, 70.5rem)
+}
+
+.grid-item {
+  background-color: rgba(255, 255, 255, 0.8);
+  border: 1px solid rgba(0, 0, 0, 0.8);
+  padding: 2rem;
+  font-size: 1.5rem;
+  text-align: left;
+}
+
+.add-task-line {
+  margin-bottom: 3rem;
 }
