--- a/views/my-list.hbs
+++ b/views/my-list.hbs
@@ -69,6 +69,10 @@
        
     </form>
 
+    <form method="POST" action="/my-list/{{this._id}}/edit">
+      <button>Edit</button>
+    </form>
+
     <form method="POST" action="/my-list/{{this._id}}/delete">
       <button>Delete</button>
     </form>
