edit post route to create

--- a/views/layout.hbs
+++ b/views/layout.hbs
@@ -16,11 +16,14 @@
          <li><a href="/">Home</a></li>
         <li><a href="/my-list">My List</a></li>
         <li><a href="/priorities">Priorities</a></li>
-        <li><a href="#">Completed</a></li>
+        <li><a href="/completed">Accomplishments</a></li>
         </ul>
         <ul class="nav-bar">
           <li><a href="/signup" target="_blank">Sign up</a></li>
           <li><a href="/login">Log in</a></li>
+          <li><form id="logout-form" action="/logout" method="POST">
+           <button>Logout</button></li>
+        </form>
         </ul>
       </nav>
 
