--- a/views/index.hbs
+++ b/views/index.hbs
@@ -1,2 +1,3 @@
-<h1>{{appTitle}} 🚀</h1>
-<p>Welcome Ironhacker!</p>
+<h1>Overwhelmedness-less</h1>
+<h2>Crisis Time Management App</h2>
+<h4>Helps you quickly put things in perspective and focus on what is really important</h4>
