--- a/views/priorities.hbs
+++ b/views/priorities.hbs
@@ -44,12 +44,21 @@
     <form method="POST" action="/priorities/{{this._id}}/update">
     <input class="list-status" type="checkbox" name="status">
     </form>
+
     <h4>{{this.description}}</h4>
 
-    <form method="POST" action="/priorities/{{this._id}}/edit">
-      <button>Edit</button>
-    </form>
-
+    
+    <div>
+      <button class="hidden-edit">Edit</button>
+      <div style="display:none;">
+        <form method="POST" action="/priorities/{{this._id}}/edit">
+            <input type="text" value="{{this.description}}" name="description">
+            <button type="submit">Save</button>  
+        </form>
+        <button class="cancel-edit">Cancel</button>
+      </div>
+    </div>
+    
     <form method="POST" action="/priorities/{{this._id}}/delete">
       <button>Delete</button>
     </form>
@@ -62,12 +71,21 @@
     <form method="POST" action="/priorities/{{this._id}}/update">
     <input class="list-status" type="checkbox" name="status">
     </form>
+
     <h4>{{this.description}}</h4>
 
-    <form method="POST" action="/priorities/{{this._id}}/edit">
-      <button>Edit</button>
-    </form>
-
+    
+    <div>
+      <button class="hidden-edit">Edit</button>
+      <div style="display:none;">
+        <form method="POST" action="/priorities/{{this._id}}/edit">
+            <input type="text" value="{{this.description}}" name="description">
+            <button type="submit">Save</button>  
+        </form>
+        <button class="cancel-edit">Cancel</button>
+      </div>
+    </div>
+    
     <form method="POST" action="/priorities/{{this._id}}/delete">
       <button>Delete</button>
     </form>
@@ -76,17 +94,28 @@
   </div>
   <div class="grid-item">
     {{#each nonUrgentNotImportantArr}}
-    <form action="/priorities/{{this._id}}/update" method="POST">
+    <form method="POST" action="/priorities/{{this._id}}/update">
     <input class="list-status" type="checkbox" name="status">
-    <h4>{{this.description}}</h4>
     </form>
 
-    <form method="POST" action="/priorities/{{this._id}}/edit">
-      <button>Edit</button>
-    </form>
+    <h4>{{this.description}}</h4>
+
+    
+    <div>
+      <button class="hidden-edit">Edit</button>
+      <div style="display:none;">
+        <form method="POST" action="/priorities/{{this._id}}/edit">
+            <input type="text" value="{{this.description}}" name="description">
+            <button type="submit">Save</button>  
+        </form>
+        <button class="cancel-edit">Cancel</button>
+      </div>
+    </div>
+    
     <form method="POST" action="/priorities/{{this._id}}/delete">
       <button>Delete</button>
     </form>
+    
     {{/each}}
   </div>
 </div>
