--- a/views/index.hbs
+++ b/views/index.hbs
@@ -1,3 +1,15 @@
-<h1>Overwhelmedness-less</h1>
-<h2>Crisis Time Management App</h2>
+{{!-- <h1></h1>
+<h2>Crisis Management App</h2>
 <h4>Helps you quickly put things in perspective and focus on what is really important</h4>
+<img src="/images/hero.jpg" --}}
+
+ <div class="hero">
+      <div class="hero-info">
+          <h1 id="name">OVERWHELMEDNESS-LESS</h1>
+          <h2> Crisis Management App </h2>
+          <p>Helps you quickly put things in perspective and focus on what is really important</p>
+      </div>
+      <div>
+          <img class="hero-image" src="/images/hero.jpg"/>
+      </div>
+    </div>
