--- a/views/layout.hbs
+++ b/views/layout.hbs
@@ -6,7 +6,7 @@
       <meta name="viewport" content="width=device-width, initial-scale=1.0">
       <meta http-equiv="X-UA-Compatible" content="ie=edge">
       <title>{{appTitle}}</title>
-      <link rel="stylesheet" href="/stylesheets/style.css"/>
+      <link rel="stylesheet" href="/stylesheets/{{style}}"/>
    </head>
 
    <body>
@@ -22,7 +22,7 @@
           <li><a href="/signup" target="_blank">Sign up</a></li>
           <li><a href="/login">Log in</a></li>
           <li><form id="logout-form" action="/logout" method="POST">
-           <button>Logout</button></li>
+           <li><button type="submit">Logout</button></li>
         </form>
         </ul>
       </nav>
