--- a/views/priorities.hbs
+++ b/views/priorities.hbs
@@ -8,7 +8,8 @@
      <link rel="stylesheet" href="/stylesheets/style.css"/>
 </head>
 <body>
-    <div class="grid-container">
+  <div class="container">
+  <div class="grid-container">
   <div class="grid-item"></div>
   <div class="grid-item grid-item-title">Important</div>
   <div class="grid-item grid-item-title">Not Important</div>
@@ -169,8 +170,7 @@
     {{/each}}
   </div>
 </div>
-<h5 class="text-center"><a href="/completed">View your accomplishments</a></h5>
-
+</div>
  
      
 
