--- a/views/my-list.hbs
+++ b/views/my-list.hbs
@@ -8,55 +8,64 @@
     <link rel="stylesheet" href="/stylesheets/style.css"/>
 </head>
 <body>
-    <div class="container">
-    <h1>My List</h1>
-    <h3>Welcome, {{username}}</h3>
-    
-     <form method="post" action="/my-list">
-     <div class="split add-task-line">
-        <div>
-        <input type="text" name="description" placeholder="Type your task here">
-        </div>
+<div class="container">
+    <div class="container-small">
+        <h1>My List</h1>
+        <h3>Welcome, {{username}}</h3>
         
-        <div>
-        <button type="submit">Add item</button>
-        </div>
-        </div>
-    </form>
-    
-    {{#each listsArr}}
-    
-    <div class="split">
         
-        <h4>{{this.description}}</h4>
-        <form method="post" action="/my-list/{{this._id}}/update">
-        <details>
-        <summary>Ask yourself..</summary>
-        <label for="importance">Is it important?</label>
-            <select id="importance" name="important">
-                <option value="yes">Yes</option>
-                <option value="no">No</option>
-            </select>
-        <label for="importance">Is it urgent?</label>
-            <select id="urgency" name="urgent">
-                <option value="yes">Yes</option>
-                <option value="no">No</option>
-            </select>
-             <button type="submit">Move</button>
-        </details>
-       
-    </form>
+        <form method="post" action="/my-list">
+        <div class="add-task-line">
+            <input type="text" name="description" placeholder="Type your task here">
+            <button class="my-list-Btn task-update-btn" type="submit">Add item</button> 
+        </div>
+        </form>
+        
+        
+        {{#each listsArr}}
+        
+        <div class="split">
+            <div>
+                <h4 class="input">{{this.description}}</h4>
+            </div>
+                <form method="post" action="/my-list/{{this._id}}/update">
+                    <details>
+                    <summary class="margin-top-bottom">Ask yourself..</summary>
+                    <div class="container-drop-down">
+                    <div>
+                    <label for="importance">Is it important?</label>
+                        <select id="importance" name="important">
+                            <option value="yes">Yes</option>
+                            <option value="no">No</option>
+                        </select>
+                    </div>  
+                    <div>
+                    <label for="importance">Is it urgent?</label>
+                        <select id="urgency" name="urgent">
+                            <option value="yes">Yes</option>
+                            <option value="no">No</option>
+                        </select>
+                    </div>  
+                    <div>
+                        <button class='task-update-btn-small' type="submit">Move</button>
+                    </div>
+                    </div>
+                    </details>
+            
+                </form>
 
-    <form method="POST" action="/my-list/{{this._id}}/delete">
-      <button>Delete</button>
-    </form>
+            <form method="POST" action="/my-list/{{this._id}}/delete">
+            <button class='margin-bottom task-update-btn'>Delete</button>
+            </form>
 
+        </div>
+        {{/each}}
+        <div class="styled-break"></div>
+        <div class="margin-top-bottom">
+        <a href="/priorities">Once you done sorting the tasks <br> click here to review your priorities</a>
+        </div>
     </div>
-    {{/each}}
-
-    <div>
-        <a href="/priorities">See your priorities</a>
-    </div>
+</div>
     
 </body>
 </html>
