--- a/views/index.hbs
+++ b/views/index.hbs
@@ -1,9 +1,13 @@
-{{!-- <h1></h1>
-<h2>Crisis Management App</h2>
-<h4>Helps you quickly put things in perspective and focus on what is really important</h4>
-<img src="/images/hero.jpg" --}}
-
- <div class="hero">
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Document</title>
+</head>
+<body>
+     <div class="hero">
       <div class="hero-info">
           <h1 id="name">OVERWHELMEDNESS-LESS</h1>
           <h2> Crisis Management App </h2>
@@ -13,3 +17,6 @@
           <img class="hero-image" src="/images/hero.jpg"/>
       </div>
     </div>
+    <h3><a href="/login">Login to get started</a></h3>
+</body>
+</html>
