--- a/public/stylesheets/home.css
+++ b/public/stylesheets/home.css
@@ -47,3 +47,21 @@ nav ul a {
     margin: 30px;
   }
   
+  .logout {
+    padding: 2px 10px;
+    letter-spacing: 1px;
+    background-color: white;
+    color: black;
+    border: 1px solid black;
+    border-radius: 30px;
+  }
+  
+  .logout:hover {
+    background-color: #aee5ff;
+  }
+
+
+  h3 {
+    margin-top: 60px;
+    text-align: center;
+  }
