--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -22,3 +22,15 @@ nav ul a {
   text-decoration: none;
 }
 
+.logout {
+    padding: 2px 10px;
+    letter-spacing: 1px;
+    background-color: white;
+    color: black;
+    border: 1px solid black;
+    border-radius: 30px;
+  }
+  
+  .logout:hover {
+    background-color: #aee5ff;
+  }
