--- a/views/layout.hbs
+++ b/views/layout.hbs
@@ -22,7 +22,7 @@
           <li><a href="/signup" target="_blank">Sign up</a></li>
           <li><a href="/login">Log in</a></li>
           <li><form id="logout-form" action="/logout" method="POST">
-           <li><button type="submit">Logout</button></li>
+           <li><button class="logout" type="submit">Log out</button></li>
         </form>
         </ul>
       </nav>
