--- a/views/priorities.hbs
+++ b/views/priorities.hbs
@@ -8,7 +8,9 @@
      <link rel="stylesheet" href="/stylesheets/style.css"/>
 </head>
 <body>
+  <h1>My Priorities</h1>
   <div class="container">
+    
   <div class="grid-container">
   <div class="grid-item"></div>
   <div class="grid-item grid-item-title">Important</div>
