--- a/views/index.hbs
+++ b/views/index.hbs
@@ -18,5 +18,8 @@
       </div>
     </div>
     <h3><a href="/login">Login to get started</a></h3>
+    <div>
+        
+    </div>
 </body>
 </html>
