--- a/views/my-list.hbs
+++ b/views/my-list.hbs
@@ -11,7 +11,7 @@
 <div class="container">
     <div class="container-small">
         <h1>My List</h1>
-        <h3>Welcome, {{username}}</h3>
+        {{!-- <h3>Welcome, {{username}}</h3> --}}
         
         
         <form method="post" action="/my-list">
