--- a/views/signup.hbs
+++ b/views/signup.hbs
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="../stylesheets/login.css"/>
     <title>Document</title>
 </head>
 <body>
@@ -14,6 +15,9 @@
         <div class="contentBx">
             <div class="formBx">
                 <h2>Signup</h2>
+                {{#if errorMessage}}
+                        <p class="error">{{errorMessage}}</p>
+                {{/if}}
                 <form method="post" action="/signup">
                     <div class="inputBx">
                         <span>Username</span>
@@ -29,9 +33,7 @@
                     <div class="inputBx">
                         <p>Already have an account? <a href="/login">Log In</a></p>
                     </div>
-                    {{#if errorMessage}}
-                        <p>{{errorMessage}}</p>
-                    {{/if}}
+                    
                 </form>
             </div>
         </div>
